[r=blake-rouse][bug=][author=ricgard] Resolves layout issue with tags edit hover

--- a/src/maasserver/static/scss/maas/components/_tables.scss
+++ b/src/maasserver/static/scss/maas/components/_tables.scss
@@ -495,6 +495,14 @@ table {
     }
   }
 
+  .table__tags {
+
+    .table__tag {
+      display: inline-block;
+      margin-right: 5px;
+    }
+  }
+
   // Form styles
   .table__input {
     display: inline-block;
